force-app/main/default/objects/Contract/fields/Contract_External_Name__c.field-meta.xml
<CustomField>
    <fullName>Contract_External_Name__c</fullName>
    <externalId>true</externalId>
    <label>Contract External Name</label> 
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>