force-app/main/default/objects/Contract/fields/WIN_ID__c.field-meta.xml
<CustomField>
    <fullName>WIN_ID__c</fullName>
    <formula>Account.WIN_ID__c</formula>
    <label>WIN ID</label>
    <type>Text</type>
</CustomField>