force-app/main/default/objects/Contract/recordTypes/ER_Contracts.recordType-meta.xml
<RecordType>
    <fullName>ER_Contracts</fullName>
    <active>true</active>
    <label>ER Contracts</label>
</RecordType>